--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<img src="images/school.png" alt="synergy quantum academy" width="900px" class="center">
+<img src="images/profile_home.png" alt="synergy quantum academy" width="900px" class="center">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
