Update index.html with CV link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ to.css" type="text/css" media="screen" charset="utf-8" />
 <div id="header">
     <div id="name"><a href="index.html">Waris Khan</a></div>
     <ul id="main-menu">
-        <li><a href="#" onclick='window.open("https://virginiatech-my.sharepoint.com/:b:/g/personal/warisk_vt_edu/EaxdP57FzSFIiu3ELp6qhJAB4vv9YX829NjNsKUoWcvugg?e=rbDt9A, "_blank");'>CV</a></li>
+        <li><a href="#" onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link, "_blank");'>CV</a></li>
         <li><a href="publications.html">Research</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="beyond_research.html">Beyond Research</a></li>
