--- a/index.html
+++ b/index.html
@@ -1,7 +1,91 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<img src="images/profile_home.png" alt="synergy quantum academy" width="900px" class="center">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Waris Khan</title>
+<link href="styles.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+<script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js?ver=3.3"></script>
+
+<style>
+    /* Sidebar styling */
+    #sidebar {
+        width: 250px;
+        float: left;
+        padding: 20px;
+        text-align: center;
+        background-color: #f9f9f9;
+        border-right: 1px solid #ddd;
+    }
+    #sidebar img {
+        border-radius: 50%;
+        width: 230px;
+        height: 230px;
+		margin-top: 80px;
+        margin-bottom: 30px;
+        object-fit: cover; /* Ensures the image fills the area */
+    }
+    #sidebar .bio {
+        font-size: 14px;
+        margin: 10px 0;
+    }
+    #sidebar .contact-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #sidebar .contact-info a {
+        color: #333;
+        display: flex;
+        align-items: center;
+        font-size: 13px;
+        text-decoration: none;
+        margin: 5px 0;
+    }
+    #sidebar .contact-info i {
+        font-size: 18px;
+        margin-right: 8px;
+    }
+    #sidebar .contact-info a:hover {
+        color: tomato;
+    }
+    /* Main content styling */
+    #container {
+        margin-left: 100px; /* Space for the sidebar */
+        padding: 20px;
+    }
+	
+</style>
+
+</head>
+
+<body>
+
+<!-- Sidebar Section -->
+<div id="sidebar">
+    <img src="images/profile_pic.jpg" alt="Waris Khan">
+    <p class="bio">Doctoral Student @ Virginia Tech | Ex-ISRO | Indian Institute of Space Science and Technology</p>
+    
+    <div class="contact-info">
+        <a href="mailto:warisk@vt.edu"><span>✉️ warisk@vt.edu</span></a>
+        <a href="https://www.linkedin.com/in/waris-khan-s/" target="_blank">
+            <i class="fab fa-linkedin"></i><span>LinkedIn: Waris Khan</span>
+        </a>
+        <a href="https://github.com/Waris-K" target="_blank">
+            <i class="fab fa-github"></i><span>GitHub: Waris-K</span>
+        </a>
+        <a href="https://x.com/war_is11" target="_blank">
+            <i class="fab fa-twitter"></i><span>X (Twitter): @war_is11</span>
+        </a>
+    </div>
+</div>
+
+
+<img src="images/profile_home.png" alt="synergy quantum academy" width="900px" class="center" style="margin-top: 400px;">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -20,7 +104,6 @@ to.css" type="text/css" media="screen" charset="utf-8" />
 
 </head>
 
-<body>
 
 <div id="header">
     <div id="name"><a href="index.html">Waris Khan</a></div>
@@ -34,7 +117,7 @@ to.css" type="text/css" media="screen" charset="utf-8" />
 
 
 <div id="container">
-
+	
 <!--Begin about Section-->
 	<div id="about">
         <div class="content">
