--- a/beyond_research.html
+++ b/beyond_research.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Waris Khan</title>
@@ -14,19 +16,25 @@
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 
 </head>
+<style>
+    .content {
+        text-align: justify;
+    }
+    </style>
 
 <body>
 
     <div id="header">
         <div id="name"><a href="index.html">Waris Khan</a></div>
         <ul id="main-menu">
-            <li><a href="#" onclick='window.open("https://virginiatech-my.sharepoint.com/:b:/g/personal/warisk_vt_edu/EaxdP57FzSFIiu3ELp6qhJAB4vv9YX829NjNsKUoWcvugg?e=rbDt9A", "_blank");'>CV</a></li>
-            <li><a href="publications.html">Research</a></li>
+            <li><a href="#" onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link, "_blank");'>CV</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Experience</a></li>
             <li><a href="beyond_research.html">Beyond Research</a></li>
         </ul>
     </div>
-
+    
     <div id="container">
 
         <!-- Begin Beyond Research Section -->
