--- a/education.html
+++ b/education.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+<img src="images/education_school.png" alt="Schools I attended" width="900px" class="center">
+
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Waris Khan - Education & Research</title>
@@ -17,15 +20,17 @@
 
 <body>
 
-<div id="header">
-    <div id="name"><a href="index.html">Waris Khan</a></div>
-    <ul id="main-menu">
-        <li><a href="#" onclick='window.open("https://virginiatech-my.sharepoint.com/:b:/g/personal/warisk_vt_edu/EaxdP57FzSFIiu3ELp6qhJAB4vv9YX829NjNsKUoWcvugg?e=rbDt9A, "_blank");'>CV</a></li>
-        <li><a href="publications.html">Research</a></li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="beyond_research.html">Beyond Research</a></li>
-    </ul>
-</div>
+    <div id="header">
+        <div id="name"><a href="index.html">Waris Khan</a></div>
+        <ul id="main-menu">
+            <li><a href="#" onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link, "_blank");'>CV</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Projects</a></li>
+            <li><a href="beyond_research.html">Beyond Research</a></li>
+        </ul>
+    </div>
+    
 
 <div id="container">
 
@@ -43,28 +48,7 @@
     </div>
     <!-- End Education Section -->
 
-    <!-- Begin Projects Section -->
-    <div id="projects">
-        <h1>Research Projects</h1>
-        <div class="content">
-            <p><b>Undergraduate Thesis: </b>
-            Study of Slosh in Rectangular Tanks – Developed FE MATLAB code and experimental setup to study sloshing waveheight and force.<br></p>
-
-            <p><b>Aerospace Vehicle Design:</b>
-            Preliminary ICBM Design – Optimized structural factors and enhanced warhead capacity.<br></p>
-
-            <p><b>Multivariable Optimization:</b>
-            Multivariable Optimization – Developed a C program for Genetic Algorithm and various optimization methods for complex functions.<br></p>
-
-            <p><b>Aerodynamics:</b>
-            Vortex Lattice Method – Developed a MATLAB code using the steady-state Vortex Lattice Method to simulate the coefficient of lift and drag in an elliptic wing.<br></p>
-
-            <p><b>Aerospace Structures:</b>
-            Functionally Graded Beams – Developed MATLAB code for analyzing functionally graded beams and solving Euler-Bernoulli beam equations.<br></p>
-        </div>
-    </div>
-    <!-- End Projects Section -->
-
+    
 </div>
 
 <!-- The JavaScript -->
