--- a/index.html
+++ b/index.html
@@ -58,8 +58,18 @@
         margin-left: 100px; /* Space for the sidebar */
         padding: 20px;
     }
+     /* Main content styling */
+     #container {
+        margin-left: 100px; /* Space for the sidebar */
+        padding: 20px;
+    }
+    /* About and News sections styling */
+    .content {
+        text-align: justify; /* Justify alignment for main content */
+    }
 	
 </style>
+
 
 </head>
 
@@ -108,9 +118,10 @@ to.css" type="text/css" media="screen" charset="utf-8" />
 <div id="header">
     <div id="name"><a href="index.html">Waris Khan</a></div>
     <ul id="main-menu">
-        <li><a href="#" onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link, "_blank");'>CV</a></li>
-        <li><a href="publications.html">Research</a></li>
+        <li><a href="#" onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link", "_blank");'>CV</a></li>
+        <li><a href="publications.html">Publications</a></li>
         <li><a href="education.html">Education</a></li>
+        <li><a href="experience.html">Experience</a></li>
         <li><a href="beyond_research.html">Beyond Research</a></li>
     </ul>
 </div>
