--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,25 @@
 </head>
 
 <body>
+    <!-- Sidebar Section -->
+    <div id="sidebar">
+        <img src="images/profile_pic.jpg" alt="Waris Khan">
+        <p class="bio">Doctoral Student @ Virginia Tech | Ex-ISRO | Indian Institute of Space Science and Technology</p>
+        
+        <div class="contact-info">
+            <a href="mailto:warisk@vt.edu"><span>✉️ warisk@vt.edu</span></a>
+            <a href="https://www.linkedin.com/in/waris-khan-s/" target="_blank">
+                <i class="fab fa-linkedin"></i><span>LinkedIn: Waris Khan</span>
+            </a>
+            <a href="https://github.com/Waris-K" target="_blank">
+                <i class="fab fa-github"></i><span>GitHub: Waris-K</span>
+            </a>
+            <a href="https://x.com/war_is11" target="_blank">
+                <i class="fab fa-twitter"></i><span>X (Twitter): @war_is11</span>
+            </a>
+        </div>
+    </div>
+
     <div id="header">
         <div id="name"><a href="index.html">Waris Khan</a></div>
         <ul id="main-menu">
