--- a/experience.html
+++ b/experience.html
@@ -12,12 +12,12 @@
 	<script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js?ver=3.3"></script>
 	<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Experience | Waris Khan</title>
-		<link rel="stylesheet" href="styles1.css">
-	</head>
+	<meta charset="UTF-8">
+	<title>Experience | Waris Khan</title>
+	<link rel="stylesheet" href="styles1.css">
+</head>
 
 <body>
 
