--- a/beyond_research.html
+++ b/beyond_research.html
@@ -48,7 +48,7 @@
         </div>
         <div class="right-side">
             <div class="header">
-                <div id="name"><a href="index1.html">Waris Khan</a></div>
+                <div id="name"><a href="index.html">Waris Khan</a></div>
                 <ul id="main-menu">
                     <li><a href="#"
                             onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link", "_blank");'>CV</a>
