--- a/indexTemp.html
+++ b/indexTemp.html
@@ -55,7 +55,7 @@ to.css" type="text/css" media="screen" charset="utf-8" />
 
 
 	<div id="header">
-		<div id="name"><a href="index1.html">Waris Khan</a></div>
+		<div id="name"><a href="index.html">Waris Khan</a></div>
 		<ul id="main-menu">
 			<li><a href="#"
 					onclick='window.open("https://drive.google.com/file/d/10MYcRq5gHp9Tr8hDHViaPg1hdrbS4rHR/view?usp=drive_link", "_blank");'>CV</a>
