--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Waris Khan</title>
-	<link href="styles1.css" rel="stylesheet" type="text/css">
+	<link href="styles.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" charset="utf-8" />
 	<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
 
 	<meta charset="UTF-8">
 	<title>Experience | Waris Khan</title>
-	<link rel="stylesheet" href="styles1.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
